--- a/gb/17/11/27/n9898969.md
+++ b/gb/17/11/27/n9898969.md
@@ -1,25 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jfduzj338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jfduzj338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jfduzj338/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jfduzj338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jfduzj338/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jfduzj338/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jfduzj338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“我在硅谷上班 年薪6位数 但没你想的有钱”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-875438098-600x400.jpg" />
 <h6>硅谷工程师的收入那么高，他们的生活过得怎么样？ (Photo credit should read AMY OSBORNE/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年11月28日讯】（大纪元记者凌妃编译报导）美国加州硅谷集聚全球高科技大厂以及众多的新创公司，这里的工程师年薪高于全美平均值，可是相对上物价、房价与生活开支却都不便宜。日前在网路上流传一句话“我在硅谷上班，<ahref="https://github.com/jfduzj338/djy/blob/master/gb/tag/%E5%B9%B4%E8%96%AA6%E4%BD%8D%E6%95%B0.md#1">年薪6位数</a>，但没你们想像的有钱”，引起热议。</p>
+	<p>【大纪元2017年11月28日讯】（大纪元记者凌妃编译报导）美国加州硅谷集聚全球高科技大厂以及众多的新创公司，这里的工程师年薪高于全美平均值，可是相对上物价、房价与生活开支却都不便宜。日前在网路上流传一句话“我在硅谷上班，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B9%B4%E8%96%AA6%E4%BD%8D%E6%95%B0.md#1">年薪6位数</a>，但没你们想像的有钱”，引起热议。</p>
 <p>一个在硅谷上班的软体工程师说，即使年薪超过6位数，却没办法存下任何钱。一般人会认为这名工程师在撒谎，因为他们的薪水都很高，怎么可能会没有积蓄呢？</p>
 <p>社交问答网站Quora.com日前出现一个问题：“在美国硅谷桑尼维尔（Sunnyvale）的软体工程师年薪介于12至13万美元，生活过得怎么样？”引起广大回响与讨论。《商业内幕》9月17日整理了住在这里的一名科技作家蓝（Danielle Lan）的回应。</p>
-<figure id="attachment_9899038" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-629852578.jpg"><img class="size-large wp-image-9899038" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-629852578-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">在美国硅谷的软体工程师年薪介于12至13万美元，生活过得怎么样？示意图。(Photo by Drew Angerer/Getty Images)</figcaption></figure>
+<figure id="attachment_9899038" aria-describedby="caption-attachment-9899038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-629852578.jpg"><img class="size-large wp-image-9899038" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-629852578-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9899038" class="wp-caption-text">在美国硅谷的软体工程师年薪介于12至13万美元，生活过得怎么样？示意图。(Photo by Drew Angerer/Getty Images)</figcaption></figure>
 <p>蓝说，这名工程师没有说谎，因为她也是过着这样“艰苦”的日子，比这个工程师好些是因为蓝和先生没有小孩。但即便如此，蓝都觉得他们在硅谷的生活也不容易。</p>
 <p>蓝说，她的先生是一名软体工程师，年薪破10万美元；而她是一名科技作家，年收入只有数万美元。他们住在加州纽瓦克（Newark），都在硅谷工作。如果没塞车，上班车程是30分钟，若是交通尖峰期，则需要1至2小时。</p>
-<figure id="attachment_9899033" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-807852.jpg"><img class="wp-image-9899033 size-large" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-807852-600x409.jpg" alt="" width="600" b="409" /></a><figcaption class="wp-caption-text">如果没塞车，车程是30分钟，若是交通尖峰期，则需要1至2小时。(Photo by David McNew/Newsmakers)</figcaption></figure>
 <p>蓝本身必须缴付13万美元的学贷，亦即每个月需还1,600美元，这个几乎占掉了她每个月开支的大宗。</p>
 <p>此外，他们夫妻俩每月还必须负担3,000美元的房贷，他们拥有一栋53万美元的房子，这是他们在硅谷能够找到最便宜的房产了。没房子之前，他们在北圣荷西（North San Jose）租屋，每月必须负担4,000美元的房租。</p>
-<figure id="attachment_9899037" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-72070527.jpg"><img class="wp-image-9899037 size-large" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-72070527-600x397.jpg" alt="" width="600" b="397" /></a><figcaption class="wp-caption-text">他们拥有一栋53万美元的房子。示意图。(Photo by Justin Sullivan/Getty Images)</figcaption></figure>
+<figure id="attachment_9899037" aria-describedby="caption-attachment-9899037" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-72070527.jpg"><img class="wp-image-9899037 size-large" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-72070527-600x397.jpg" alt="" width="600" b="397" /></a><figcaption id="caption-attachment-9899037" class="wp-caption-text">他们拥有一栋53万美元的房子。示意图。(Photo by Justin Sullivan/Getty Images)</figcaption></figure>
 <p>他们有两部车，加上保险、水电瓦斯开支，林林总总算下来，两人的收入就快花光了。</p>
-<figure id="attachment_9899034" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-56391143.jpg"><img class="wp-image-9899034 size-large" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-56391143-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">他们有两部车，加上保险、水电瓦斯开支，是一笔很大的数目。示意图。(Photo by David Paul Morris/Getty Images)</figcaption></figure>
+<figure id="attachment_9899034" aria-describedby="caption-attachment-9899034" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-56391143.jpg"><img class="wp-image-9899034 size-large" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-56391143-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9899034" class="wp-caption-text">他们有两部车，加上保险、水电瓦斯开支，是一笔很大的数目。示意图。(Photo by David Paul Morris/Getty Images)</figcaption></figure>
 <p>蓝说，如果刻意减少外食、娱乐和开销的机会，他们每月可以存下300至500美元。她说，他们每个月的收入几乎被贷款和房屋装修给花光了。</p>
-<figure id="attachment_9899036" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-169383507.jpg"><img class="size-large wp-image-9899036" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-169383507-600x418.jpg" alt="" width="600" b="418" /></a><figcaption class="wp-caption-text">如果刻意减少外食、娱乐和开销的机会，他们每月可以存下300至500美元。示意图。(Photo by Stewart F. House/Getty Images)</figcaption></figure>
+<figure id="attachment_9899036" aria-describedby="caption-attachment-9899036" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-169383507.jpg"><img class="size-large wp-image-9899036" src="https://i.epochtimes.com/assets/uploads/2017/11/GettyImages-169383507-600x418.jpg" alt="" width="600" b="418" /></a><figcaption id="caption-attachment-9899036" class="wp-caption-text">如果刻意减少外食、娱乐和开销的机会，他们每月可以存下300至500美元。示意图。(Photo by Stewart F. House/Getty Images)</figcaption></figure>
 <p>蓝说，当她住在美国中西部时，两房三浴的别墅每月租金只要900美元，但在加州北圣荷西，一间两房一浴的公寓，每月租金却高达4,000美元。</p>
 <p>当老一辈亲人问他们，每个月收入这么高，为什么还买不起豪华车或是上昂贵的餐厅用餐？他们责备年轻人不会理财或是草率花钱。但是，在硅谷，真的是什么都贵，什么都要钱。</p>
 <div class="inline_share"><ahref="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F11%2F27%2Fn9898969.md#1" target="_blank" style="margin-bottom:10px;display:inline-block;"><img src="https://www.epochtimes.com/assets/themes/djy/images/fb_share/rocket.png"></a></div>
@@ -29,42 +28,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/7/20/n8118664.md#1">嘉大电机生无师自通 首夺健美金牌</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/8/16/n8206122.md#1">挥杆高尔夫 挥出高贵气质 健美健身</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/5/17/n9152562.md#1">男士不当注射辅助健美药需换肾</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/8/8/n9507164.md#1">不屈勇士！双截肢军人苦练成健美先生</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/8/20/n9547915.md#1">狂吃蛋白粉 妙龄健美达人香消玉殒</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/9/6/n9603826.md#1">超励志！80岁健美奶奶告诉你一切皆有可能</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/3/9/n11927786.md#1">美的世界美容 还你童颜 春季酬宾</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/19/4/22/n11205598.md#1">瓶装燕窝白兰氏：呵护天下妈妈的母亲节好礼</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/19/1/28/n11008205.md#1">ARTAS 智能精密头发移植系统</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/19/1/7/n10959166.md#1">让秃头男人长出头发来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/16/n10222466.md#1">达拉斯成全美族裔多样性最高都市区之一</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/16/n10222604.md#1">达拉斯地区二月份房屋销售增长10%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/16/n10222662.md#1">达拉斯简讯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/23/n10241925.md#1">达拉斯简讯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/jfduzj338/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12291106.md#1">【视频】黄历六月北京飞雪 网民：必有奇冤</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/24/n12280824.md#1">【内幕】习恭维之计失效 川普发反共檄文</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293489.md#1">【新闻看点】美澳军事合作 欧盟27国制裁中共</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12289207.md#1">双方不约而同感激对方 艾成与王瞳登记结婚</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12289082.md#1">父女首搭档节目收摊 小祯宣布回归戏剧圈</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/28/n12288658.md#1">沉重的“7.20”——神韵艺术家回忆曾经的迫害</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/jfduzj338/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jfduzj338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jfduzj338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/27/n9898969.htm">“我在硅谷上班 年薪6位数 但没你想的有钱”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/27/n9898969.htm">“我在硅谷上班 年薪6位数 但没你想的有钱”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jfduzj338/djy/blob/master/gb/17/11/27/n9898969.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jfduzj338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jfduzj338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jfduzj338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jfduzj338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/11/27/n9898969.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
